# Hacklohoma

./: README.md
backend/: .gitignore
backend/agents/question_creator/: .env.example  README.md  pyproject.toml
backend/agents/question_creator/knowledge/: user_preference.txt
backend/agents/question_creator/src/question_creator/: api.py  crew.py  main.py  parsers.py  types.py
backend/agents/question_creator/src/question_creator/config/: agents.yaml  tasks.yaml
backend/agents/question_grader/: README.md  pyproject.toml
backend/agents/question_grader/src/question_grader/: api.py  crew.py  main.py  parsers.py  types.py
backend/agents/question_grader/src/question_grader/config/: agents.yaml  tasks.yaml
frontend/: .env  .env.example  .gitignore  package-lock.json  package.json  prettier.config.ts  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/execute/: route.ts
frontend/src/app/catalog/: page.tsx
frontend/src/app/feedback/: page.tsx
frontend/src/app/interview/: page.tsx
frontend/src/components/: CodeEditor.tsx  Confetti.tsx  ConvAI.tsx  InterviewFeedback.tsx  InterviewSidebar.tsx  InterviewTerminal.tsx  VideoEditor.tsx
frontend/src/types/: Feedback.d.ts  Interview.d.ts
