[project]
name = "question_creator"
version = "0.1.0"
description = "question_creator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
question_creator = "question_creator.main:run"
run_crew = "question_creator.main:run"
train = "question_creator.main:train"
replay = "question_creator.main:replay"
test = "question_creator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
