[project]
name = "question_grader"
version = "0.1.0"
description = "question_grader using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[project.scripts]
question_grader = "question_grader.main:run"
run_crew = "question_grader.main:run"
train = "question_grader.main:train"
replay = "question_grader.main:replay"
test = "question_grader.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
